2006-02-06 Mikhail Khodjaiants
	Suppress "set auto-solib" - returns error on Windows.
	* StandardWinCommandFactory.java

2006-02-06 Mikhail Khodjaiants
	Use getters to access members of "MICommand".
	* MIBreakCondition.java
	* MICommand.java
	* MIDataDisassemble.java
	* MIEnvironmentCD.java
	* MIGDBSetEnvironment.java

2006-02-06 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	* MANIFEST.MF
	* CommandFactory.java
	+ mi/org/eclipse/cdt/debug/mi/core/command/factories (package)
	+ CommandFactoriesMessages.java
	+ CommandFactoriesMessages.properties
	+ CommandFactoryDescriptor.java
	+ CommandFactoryManager.java
	+ StandardCommandFactory.java
	+ mi/org/eclipse/cdt/debug/mi/core/command/factories/win32 (package)
	+ CygwinCommandFactory.java
	+ CygwinMIEnvironmentCD.java
	+ CygwinMIEnvironmentDirectory.java
	+ StandardWinCommandFactory.java
	+ WinCLIInfoSharedLibrary.java
	+ WinCLIInfoSharedLibraryInfo.java
	+ WinMIEnvironmentCD.java
	* CLIInfoSharedLibraryInfo.java
	+ commandFactories.exsd
	- CygwinCommandFactory.java
	* CygwinGDBCDIDebugger.java
	* CygwinGDBCDIDebugger2.java
	* CygwinGDBDebugger.java
	- CygwinMIEnvironmentCD.java
	- CygwinMIEnvironmentDirectory.java
	* GDBCDIDebugger2.java
	* IMILaunchConfigurationConstants.java
	* MIPlugin.java
	* plugin.xml
	* plugin.properties

2006-01-31 Mikhail Khodjaiants
	Bug 124966: GDBTypeParser.parse(String) parses incorrectly.
	Applied patch from Matthias Spycher (matthias@coware.com).
	* GDBTypeParser.java

2006-01-27 Mikhail Khodjaiants
	Bug 107202: slow debug launch with external sources.
	Use "-p" option when passing a large number of directories to "cygpath".
	* CygwinMIEnvironmentDirectory.java

2006-01-25 Mikhail Khodjaiants
	Reversing changes made to fix bug 107571. The fix for bug 119683 covers this problem too.
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java

2006-01-23 Mikhail Khodjaiants
	Bug 119683: long messages during launch cause gdb to timeout, launch to fail.